# my_dashboard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  README.md.backup  TODO.md  USAGE.md  actual_demo_output.txt  demo_output.txt  devenv.nix  env.example  run.sh
.github/: CODEOWNERS  branch-protection.md
.github/workflows/: ci.yml
docs/: ai-prompts.md  calculations.md
src/: dashboard.rs  golden_hour.rs  lib.rs  main.rs  photography_tips.rs  solar.rs  weather.rs
tests/: integration_tests.rs  readme_snapshot_test.rs
