[package]
name = "my_dashboard"
version = "0.4.8"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sunrise = "2.1"
colored = "2.0"
anyhow = "1.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
regex = "1"
