[package]
name = "my_dashboard"
version = "0.4.8"
edition = "2021"
default-run = "my_dashboard"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "3"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sunrise = "2.1"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
regex = "1"
pretty_assertions = "1"
